# weaver

./: .gitignore  100 AI-CIV_THOUGHTS.md  ACTIVATE-HOURLY-EMAIL-CHECK.md  ARCHAEOLOGICAL-ANALYSIS-2025-11-07.md  BUSINESS-AGENTS-AICIV-INTEGRATION.md  BUSINESS-STACK-4-AGENT-FRAMEWORK.md  CLAUDE-backup-10-5.md  CLAUDE.md  DASHBOARD-README.md  DASHBOARD-SUMMARY.md  HANDOFF-DETERMINISTIC-CHECK.md  HUMAN-WISDOM-SYNTHESIS.md  INTEGRATION-ROADMAP.md  MEMORY-SYSTEM-IMPLEMENTATION-REPORT.md  MISSION-COMPLETE-ADR004.md  README.md  SEND_WALLET_NOW.sh  SESSION-COMPLETE.md  WEAVER-COMPLETE-BACKUP-MANIFEST.md  WEAVER-MANIFESTO-SUMMARY.md  agents_stack.py  autonomous-test-success.txt  brainstorm-message-to-acg.md  browser-vision-FIRST-TEST-REPORT.md  browser_vision_test.py  dashboard_demo.sh  demo_memory_retrieval.py  flow_dashboard.json  galaxy_brain_gameplan.md  message-to-acg-deliverables.md  observatory  pyproject.toml  requirements-telegram.txt  search-archive.sh  start-dashboard  test_browser_vision.html  test_doc_synthesizer_output.docx  test_skills_analysis.xlsx  test_skills_spreadsheet.xlsx  timing-correction-to-acg.md  (+5 more)
.claude/: AGENT-CAPABILITY-MATRIX.md  AGENT-CAPABILITY-MATRIX.md.backup  AGENT-EMOJI-REGISTRY.md  AGENT-INVOCATION-GUIDE.md  CLAUDE-CORE.md  CLAUDE-OPS.md  CONTACTS.md  ENDLESS-SESSION-ACTIVITIES.md  SKILLS-USAGE-GUIDE.md  TEAM-GAMMA-DELIVERY.md  autonomous-prompt.txt  bluesky-ongoing-threads.md  bsky_last_check.txt  bsky_responded.txt  mcp-servers-README.md  mcp-servers.json  settings.json  skills-registry.md  skills-registry.md.backup
.tg_sessions/: 437939400.json  jsonl_monitor_state.json  jsonl_monitor_state.json.backup  jsonl_monitor_state.json.old  jsonl_monitor_state_fixed.json  monitor_state.json
.trash/: README.md
CLAUDE-CODE-WEB/: ARCHIVE-SCANNER-OVERVIEW.md  AUTONOMOUS-CHECK-SYSTEM.md  BIG-MISSION.md  BROWSER-VISION-TEST-REPORT.md  CLAUDE-MD-AUDIT-COMPLETE.md  CLAUDE-backup-2025-10-08.md  CROSS-CIV-CAPABILITY-SHARING.md  DASHBOARD-DELIVERABLES.md  DASHBOARD-EXAMPLE.md  ED25519-TESTING-CHECKLIST.md  EVERYTHING-AUDIT-AGENT-QUALITY.md  HANDOFF-TO-HUMAN.md  INTEGRATION-GUIDE.md  LINEAGE-WISDOM-PACKAGE-SPEC.md  MEMORY-SYSTEM-README.md  MINIMAL-BUSINESS-STACK-FRAMEWORK.md  PRODUCTION-READY-CHECKLIST.md  QUICK-REFERENCE.md  README.md  SECURITY-AUDIT-2025-11-07.md  TEST-AUDIT-SUMMARY.txt  TEST-DEBT-ACTION-PLAN.md  WEAVER-COMPLETE-BACKUP-MANIFEST.md  WEAVER-MANIFESTO.md  draft-response-to-acg.md  loose-game-plan.md  test-architect-assessment.md
agents/: README.md  api-architect.md  code-archaeologist.md  communications-coordinator.md  conflict-resolver.md  doc-synthesizer.md  feature-designer.md  naming-consultant.md  pattern-detector.md  performance-optimizer.md  refactoring-specialist.md  result-synthesizer.md  security-auditor.md  system-librarian.md  task-decomposer.md  test-architect.md  web-researcher.md
blog/: banner.png:Zone.Identifier
config/: telegram_config.example.json  telegram_config.json
cron/: QUICKSTART.md  README.md  TEST-RESULTS.md  TMUX-INJECTION-GUIDE.md  example-crontab.txt  inject-prompt.sh  injection-state.json  one-time-test.sh  tmux-setup.sh
docs/: AGENT-OUTPUTS.md  AI-CIV-INFRASTRUCTURE-SYNTHESIS.md  API-ARCHITECTURE-MAP.md  API-INTERFACE-REVIEW.md  API-QUICK-REFERENCE.md  API-REVIEW-EXECUTIVE-SUMMARY.md  API-REVIEW-INDEX.md  API-STANDARD-QUICK-START.md  API-STANDARD-TECHNICAL-SUMMARY.md  ASSET-REGISTRY.md  BE-NICE-TO-GITHUB-GUIDE.md  BLUESKY-API-REFERENCE.md  BLUESKY-CROSS-CIV-DESIGN.md  ED25519-ADR004-INTEGRATION.md  ED25519-INTEGRATION-PROTOCOL.md  EXTERNAL-REFERENCES.md  FILE-INDEX.md  GETTING-STARTED.md  HUB-COMMUNICATION-GUIDE.md  INTER-COLLECTIVE-API-STANDARD-v1.0.md  MEMORY-RETRIEVAL-FLOW.md  PROTOCOL-CHANGE-FLOWCHART.md  PROTOCOL-CHANGE-INDEX.md  PROTOCOL-CHANGE-PROCESS.md  PROTOCOL-CHANGE-QUICK-REFERENCE.md  README-API-STANDARD.md  README-mission-2.md  TEAM2_ANALYSIS_INDEX.md  TEAM2_ANALYSIS_SUMMARY.md  TEAM2_DATA_FLOW_DIAGRAMS.txt  TEAM2_DEPENDENCY_MAP.txt  TEAM2_HUB_ARCHITECTURE_ANALYSIS.md  TELEGRAM-ROBUST-SETUP.md  WEAVER-CROSS-CIV-PROTOCOL-DRAFT.md  (+6 more)
(+1538 files in other folders)
